--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "tig": "^0.1.43"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3"
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
