--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,17 @@
+/* 기존 코드
 {
-  "extends": [
-    "react-app",
-    "plugin:prettier/recommended"
-  ]
+  "extends": ["react-app", "plugin:prettier/recommended"]
+}
+*/
+
+{
+  "plugins": [
+    // ...
+    "react-hooks"
+  ],
+  "rules": {
+    // ...
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+  }
 }
